2008-09-15  Alan Modra  <amodra@bigpond.net.au>

	* gas/all/gas.exp: Don't run redef tests on a bunch of targets.
	* gas/elf/elf.exp: Likewise.

2008-09-14  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* gas/z80/ld-group.s, gas/z80/ld-group.d: New test.
	* gas/z80/block.s, gas/z80/block.d: New test
	* gas/z80/arith.s, gas/z80/arith.d: New test
	* gas/z80/rotate.s, gas/z80/rotate.d: New test
	* gas/z80/bit.s, gas/z80/bit.d: New test
	* gas/z80/branch.s, gas/z80/branch.d: New test
	* gas/z80/inout.s, gas/z80/inout.d: New test
	* gas/z80/misc.s, gas/z80/misc.d: New test
	* gas/z80/z80.exp: Run them.

2008-09-11  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/sse2avx.s: Remove pclmulXXX tests.  Add tests for
	Intel syntax.
	* gas/i386/x86-64-sse2avx.s: Likewise.

	* gas/i386/sse2avx.d: Updated.
	* gas/i386/x86-64-sse2avx.d: Likewise. 

2008-09-09  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/common.s: New test.
	* gas/ppc/common.d: Likewise.
	* gas/ppc/power4_32.s: Likewise.
	* gas/ppc/power4_32.d: Likewise.
	* gas/ppc/power6.s: Add attn, mtcr, mtcrf, mfcr, dcbz.
	* gas/ppc/power6.d: Likewise.
	* gas/ppc/ppc.exp: Run power4_32 test.

2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* gas/mips/cfi-n64-1.s, gas/mips/cfi-n64-1.d: New test.
	* gas/mips/mips.exp: Run it.

2008-09-05  Nick Clifton  <nickc@redhat.com>

	* gas/arm/abs12.d: Update expected disassembly.
	* gas/arm/tls_vxworks.d: Likewise.
	* gas/arm/unwind_vxworks.d: Likewise.
	* gas/arm/group-reloc-alu-encoding-bad.d: Skip for vxworks
	targets.
	* gas/arm/group-reloc-alu.d: Likewise.
	* gas/arm/group-reloc-ldc-encoding-bad.d: Likewise.
	* gas/arm/group-reloc-ldc.d: Likewise.
	* gas/arm/group-reloc-ldr-encoding-bad.d: Likewise.
	* gas/arm/group-reloc-ldr.d: Likewise.
	* gas/arm/group-reloc-ldrs-encoding-bad.d: Likewise.
	* gas/arm/group-reloc-ldrs.d: Likewise.
	* gas/arm/local_function.d: Likewise.
	* gas/arm/mapshort-elf.d: Likewise.
	* gas/arm/undefined.d: Likewise.
