@@ -11,3 +11,5 @@ Disassembly of section .text:
 .*:	b9 3e 00 69 [	 ]*kimd	%r6,%r9
 .*:	b9 3f 00 69 [	 ]*klmd	%r6,%r9
 .*:	b9 1e 00 69 [	 ]*kmac	%r6,%r9
+.*:	eb 69 50 00 80 8f [	 ]*clclu	%r6,%r9,-524288\(%r5\)
+.*:	07 07 [ 	]*bcr	0,%r7
