@@ -5,3 +5,4 @@ foo:
 	kimd	%r6,%r9
 	klmd	%r6,%r9
 	kmac	%r6,%r9
+	clclu	%r6,%r9,-524288(%r5)
