@@ -23,7 +23,6 @@ Disassembly of section .text:
 .*:	e3 65 a0 00 80 20 [	 ]*cg	%r6,-524288\(%r5,%r10\)
 .*:	e3 65 a0 00 80 30 [	 ]*cgf	%r6,-524288\(%r5,%r10\)
 .*:	e3 65 a0 00 80 79 [	 ]*chy	%r6,-524288\(%r5,%r10\)
-.*:	eb 69 50 00 80 8f [	 ]*clclu	%r6,%r9,-524288\(%r5\)
 .*:	e3 65 a0 00 80 21 [	 ]*clg	%r6,-524288\(%r5,%r10\)
 .*:	e3 65 a0 00 80 31 [	 ]*clgf	%r6,-524288\(%r5,%r10\)
 .*:	eb ff 50 00 80 55 [	 ]*cliy	-524288\(%r5\),255
@@ -129,4 +128,3 @@ Disassembly of section .text:
 .*:	e3 65 a0 00 80 82 [	 ]*xg	%r6,-524288\(%r5,%r10\)
 .*:	eb ff 50 00 80 57 [	 ]*xiy	-524288\(%r5\),255
 .*:	e3 65 a0 00 80 57 [	 ]*xy	%r6,-524288\(%r5,%r10\)
-.*:	07 07 [	 ]*bcr	0,%r7
