@@ -17,7 +17,6 @@ foo:
 	cg	%r6,-524288(%r5,%r10)
 	cgf	%r6,-524288(%r5,%r10)
 	chy	%r6,-524288(%r5,%r10)
-	clclu	%r6,%r9,-524288(%r5)
 	clg	%r6,-524288(%r5,%r10)
 	clgf	%r6,-524288(%r5,%r10)
 	cliy	-524288(%r5),255
