@@ -1,3 +1,14 @@
+2008-09-26  Andreas Krebbel  <krebbel1@de.ibm.com>
+
+	* gas/s390/esa-g5.d: Adjust according to the s390-opc changes.
+	* gas/s390/esa-g5.s: Likewise.
+	* gas/s390/esa-z990.d: Likewise.
+	* gas/s390/esa-z990.s: Likewise.
+	* gas/s390/zarch-z900.d: Likewise.
+	* gas/s390/zarch-z900.s: Likewise.
+	* gas/s390/zarch-z990.d: Likewise.
+	* gas/s390/zarch-z990.s: Likewise.
+
 2008-09-15  Alan Modra  <amodra@bigpond.net.au>
 
 	* gas/all/gas.exp: Don't run redef tests on a bunch of targets.
